<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"
           android:id="@+id/main_nav">

        <item android:id="@+id/nav_home"
              android:title="@string/nav_home_string"
              android:icon="@drawable/ic_home"/>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/user_nav">

        <!--<item android:id="@+id/nav_friends"-->
            <!--android:title="@string/nav_friends"-->
            <!--android:icon="@drawable/ic_friends_black"-->
            <!--app:actionLayout="@layout/nav_menu_counter"/>-->

        <item android:id="@+id/nav_favorites"
            android:title="@string/nav_favorites"
            android:icon="@drawable/ic_favorites_black"
            app:actionLayout="@layout/nav_menu_counter"/>

        <item android:id="@+id/nav_reviews"
            android:title="@string/nav_reviews"
            android:icon="@drawable/ic_reviews_black"
              app:actionLayout="@layout/nav_menu_counter"/>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/app_nav">

        <!--<item android:id="@+id/nav_settings"-->
              <!--android:title="@string/nav_settings_string"-->
              <!--android:icon="@drawable/ic_action_settings"/>-->

        <item android:id="@+id/nav_sign_out"
            android:title="@string/nav_sign_out"
            android:icon="@drawable/ic_sign_out"/>

        <item android:id="@+id/nav_info"
              android:title="@string/nav_about_string"
              android:icon="@drawable/ic_action_info"/>

    </group>
</menu>