<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:background="@color/primary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:layout_marginTop="100dip"
        style="@style/logo_text"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dip"
        android:theme="@style/login_edit_text">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="@dimen/login_edit_text_size"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:theme="@style/login_edit_text">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="@dimen/login_edit_text_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>

    </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:layout_gravity="center"
            android:text="@string/login_button"
            android:theme="@style/button_material_primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="or"
            style="@style/generic_text_style"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_gravity="center"
            android:text="@string/signup_button"
            android:theme="@style/button_material_primary"/>

</LinearLayout>